# AI-Video-Editor

./: .env.example  .gitignore  Dockerfile  README.md  build_exe.bat  docker-compose.yml  launcher.py  pyproject.toml  requirements.txt  start.bat  transforms.trf
backend/: auth.py  background.py  config.py  main.py  schemas.py  store.py  tasks.py  templates.py  utils.py
backend/ai/: __init__.py  base.py  gemini_client.py  nvidia_client.py  provider_factory.py
backend/engine/: __init__.py  beat_detect.py  clip_fragmenter.py  cut_refiner.py  exporters.py  filters.py  renderer.py  scene_detect.py  speech_detect.py  timeline_preview.py  transitions.py
docs/: AUDIT_SAECS_v6.0.md  GUIA_USUARIO.md  SAECS_v6.0.md
frontend/: app.py
prompts/: system_prompt.md
