[project]
name = "ai-video-editor"
version = "1.0.0"
description = "AI-powered video editor using Gemini API and FFmpeg"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
